Updated medical documentation
